- kurz vor präsi

--- a/app/views/addarticle.scala.html
+++ b/app/views/addarticle.scala.html
@@ -48,13 +48,13 @@
                                 <div class="col-sm-6">
                                     <div class="radio">
                                         <label>
-                                            <input type="radio" name="type" id="typeUser" value="user">
+                                            <input type="radio" name="typeSwitch" id="typeUser" value="user">
                                             Training
                                         </label>
                                     </div>
                                     <div class="radio">
                                         <label>
-                                            <input type="radio" name="type" id="typeMaschine" value="maschine">
+                                            <input type="radio" name="typeSwitch" id="typeMaschine" value="maschine">
                                             Bewertung
                                         </label>
                                     </div>
