--- a/app/views/articlelist.scala.html
+++ b/app/views/articlelist.scala.html
@@ -16,14 +16,9 @@
                             <div class="col-sm-6">
                                 <select class="form-control" id="source">
 
-                                    <option value="AK">#Stichwort1</option>
-                                    <option value="HI">#Stichwort2</option>
-                                    <option value="HI">#Stichwort3</option>
-                                    <option value="HI">#Stichwort4</option>
-                                    <option value="HI">#Stichwort5</option>
-                                    <option value="HI">#Stichwort6</option>
-                                    <option value="HI">#Stichwort7</option>
-                                    <option value="HI">#Stichwort8</option>
+                                    <option value="AK">Apple iPhone 4</option>
+                                    <option value="HI">Apple iPhone 5s</option>
+                                    <option value="HI">Samsung Galaxy S4</option>
 
                                 </select>
 
