--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -2,20 +2,33 @@
 @main("Willkommen") {
     <div class="container"><!-- container -->
 
-        <h1>RapidReckon - Slogan!</h1>
+        <h1>RapidReckon - Soziale Tends vor den Anderen erkennen!</h1>
 
         <div class="panel panel-primary">
             <div class="panel-body">
-                <h3>Eine detailierte Anleitung für Benutzer!</h3>
+                <h3>Herzlich Willkommen!</h3>
 
-                <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.</p>
+                <p>Die relevante Plattform f&uuml;r dieses Projekt soll das Blogsystem von Tumblr sein. &Uuml;ber eine Programmierschnittstelle (API) sollen von vorausgew&auml;hlten, relevanten Blogs, unternehmensbezogene Beitr&auml;ge extrahiert werden.<br />Nachdem die relevanten Blogs ausfindig gemacht worden sind, sucht ein Mechanismus mittles einer Stichwortsuche alle Eintr&auml;ge des jeweiligen Blogs, in denen das Stichwort vorkommt. Annahme: Jeder Post, in dem das Stichwort (der Unternehmensname) zu finden ist hat Bezug zu diesem Unternehmen, wenn auch nicht direkt. Beitr&auml;ge sollen nun extrahiert werden und in die Datenbank des Systems eingetragen werden.<br />Hierzu m&uuml;ssen neben dem Inhalt des Beitrags auch der Blogname, sowie das Datum der Ver&ouml;ffentlichung f&uuml;r Analysezwecke gesichert werden. Sind Beitr&auml;ge nun im System eingespeist, so sollen diese Nutzern verf&uuml;gbar gemacht werden.<br />Nutzer haben die M&ouml;glichkeit sich lediglich mit einer Mail-Adresse, Geschlechtsangabe und einem Kennwort zu registrieren, da die Abfrage zu vieler Daten abschreckend wirken kann und f&uuml;r das System nicht relevant ist. So dient die Mail-Adresse neben dem Login als Mittel der Kommunikation zwischen dem System und dem Nutzer.</p>
 
-                <p>Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi. Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.</p>
+                <h3>Du kannst auch weitere Freunde einladen:</h3>
+                <dl class="dl-horizontal" style="font-size:15px;">
+                    <dt class="fa  fa-twitter"></dt>
+                    <dd><a>Twitter</a></dd>
 
-                <p>Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi.</p>
+                    <dt class="fa  fa-facebook"></dt>
+                    <dd><a>Facebook</a></dd>
 
-                <p>Nam liber tempor cum soluta nobis eleifend option congue nihil imperdiet doming id quod mazim placerat facer possim assum. Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat.</p>
+                    <dt class="fa  fa-google-plus"></dt>
+                    <dd><a>Google +</a></dd>
 
+                    <dt class="fa  fa-envelope"></dt>
+                    <dd><a>E-Mail</a></dd>
+                </dl>
+
+                <p>Loggt ein Nutzer sich nun im System ein, so werden ihm Posts angezeigt, welches es gilt anhand eines Stimmunsbarometers zu bewerten. Die Skala reicht von -5 f&uuml;r sehr schlecht &uuml;ber 0 f&uuml;r neutral bis 5 f&uuml;r sehr gut. Der Benutzer liest einen Beitrag, welcher sich auf ein Unternehmen bezieht, bewertet rein nach Gef&uuml;hl die Stimmung im Bezug auf das Unternehmen und sendet seine Bewertung ab. Es folgt automatisch der n&auml;chste Beitrag. Theoretisch geht dies so lange, bis er alle Eintr&auml;ge bewertet hat</p>
+                <p>Die Motiviation f&uuml;r den Nutzer Beitr&auml;ge zu bewerten liegt in einem Punktesystem. F&uuml;r jeden bewerteten Post werden dem Nutzer 10 RPs (ReviewPoints) gutgeschrieben. F&uuml;r verschiedene Pr&auml;mien m&uuml;ssen verschiedene Punktezahlen erreicht werden (Beispiel: F&uuml;r einen Kaffe am CafeCampus f&uuml;r Studenten der Universit&auml;t G&ouml;ttingen reichen 1000 RPs, ein 5 Euro Amazon-Gutschein ist 7500 RPs wert. Um ein wahlloses durchklicken des Nutzers zu verhindern werden neben dem Limit der pro Tag maximal abzugebenden Reviews auch Zeiten zwischen den einzelnen Posts vorgegeben. Ein Post mit bspw. nur 100 Zeichen muss erst 10 Sekunden angezeigt werden, bevor er bewertet werden kann. Ist ein Beitrag l&auml;nger, bspw. 500 Zeichen, so wird er entsprechend l&auml;nger angezeigt.</p>
+                <p>Nachdem eine ausreichende Anzahl an Posts von verschiedenen Leuten bewertet wurde, werden die Beitr&auml;ge inklusive deren unterschiedlicher Bewertungen extrahiert und dienen nun dem Training eines neuronalen Netzes.</p>
+                <p>Ziel ist es, das Netzwerk so zu trainieren, dass es m&ouml;glichst realit&auml;tsnahe Bewertungen f&uuml;r Posts abgibt, die man dem Netzwerk ohne vorige Bewertungen gibt.</p>
             </div>
         </div>
     </div>
