--- a/app/views/rating.scala.html
+++ b/app/views/rating.scala.html
@@ -40,6 +40,7 @@
     <div class="row">
         <div class="col-md-12">
             <button id="saveRating" value="@article.id" class="btn btn-primary btn-block">Bewertung abschließen</button>
+            <button id="saveRating" value="@article.id" class="btn btn-inverse btn-block">Diesen Artikel überspringen</button>
         </div>
     </div>
 
